# MDS

./: .gitignore  CMakeLists.txt  README.md
geo/: GP_2d.h  GP_3d.h  GP_Base.h  GP_Circle.cpp  GP_Circle.h  GP_Torus.cpp  GP_Torus.h  Mesh.cpp  Mesh.h  Torus.cpp  Torus.h
math/: Coord7.cpp  Coord7.h  CoordSys.cpp  CoordSys.h  Matrix.h  Quaternion.cpp  Quaternion.h  Scalar.h  Vector3.h
spline/: SplAkima.cpp  SplAkima.h  SplBase.cpp  SplBase.h  SplLagrange3.cpp  SplLagrange3.h  Spline.cpp  Spline.h
